# verify-emoji-commit

./: Cargo.toml
src/: commit_rules.rs  main.rs
