[package]
name = "verify-emoji-commit"
description = "Verify commit message with emoji-commit"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
emoji-commit-type = "0.1.1"
